cmake_minimum_required(VERSION 3.26)
project(clase_string)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(clase_string
        ejercicio.cpp
        ejercicio.h)
add_executable(ejercicio2 ejercicio2.cpp)
add_executable(ejercicio3 ejercicio3.cpp)
add_executable(ejercicio4 ejercicio4.cpp)